<resources>

    <!-- Application & Menu -->
    <string name="app_name">StoryView</string>
    <string name="story_image">Photo Story</string>
    <string name="story">StoryViewApp</string>
    <string name="logo_app">Logo StoryView App</string>
    <string name="change_language">Change Language</string>
    <string name="change_theme">Change Theme</string>
    <string name="log_out">Log Out</string>
    <string name="permission_granted">Permission request granted</string>
    <string name="permission_denied">Permission request denied</string>

    <!-- Landing, Login & Register Page -->
    <string name="landing_app">Landing Page</string>
    <string name="title_landing_1">Welcome to</string>
    <string name="title_landing_2">StoryView App!</string>
    <string name="title_login">Let\'s Start Share Your Story!</string>
    <string name="title_register">Fill in your details below</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="message_welcome_page">"Share Your Story with Us on <b>StoryView</b>"</string>
    <string name="name">Enter Username</string>
    <string name="email">Enter your Email</string>
    <string name="password">Enter Password</string>
    <string name="loginButton">Login?</string>
    <string name="registerButton">Register?</string>
    <string name="email_error">Enter the text that matches the format!</string>
    <string name="password_error">Password cannot be less than 8 characters!</string>
    <string name="null_column">Fill in All Fields First</string>
    <string name="null_name">Fill the name box</string>
    <string name="null_email">Fill the Email box</string>
    <string name="null_password">Fill the Password</string>
    <string name="next">Next</string>
    <string name="success_registration">Successful Registration! Your account has been successfully created.</string>
    <string name="email_not_registered">Email not Registered</string>
    <string name="wrong_password">Password that you enter is not correct</string>
    <string name="login_success">Login Success!</string>
    <string name="login_failed">Login Failed, Try Again!</string>

    <!-- Add Story & Camera -->
    <string name="add_story">Add to Story</string>
    <string name="story_error">Story Not Found!</string>
    <string name="story_description">Story Description</string>
    <string name="picture">Picture</string>
    <string name="camera">Camera</string>
    <string name="shoot">Shoot Photo</string>
    <string name="gallery">Gallery</string>
    <string name="description">Description Text</string>
    <string name="more_menu">More Menu</string>
    <string name="error_camera">Failed to bring up the camera</string>
    <string name="error_file">Invalid file input</string>
    <string name="upload_success">Story Upload Successfully</string>
    <string name="warning_fill_file">Fill all the file!</string>
    <string name="warning_description">Fill the Description first!</string>
    <string name="miss_capture">Missed capturing image</string>
    <string name="success_alert">Success!</string>
    <string name="error_alert">Error shown!</string>

    <!-- Maps Variation -->
    <string name="title_maps">Google Maps</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>

</resources>