<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.DetailStoryActivity">

    <ImageView
        android:id="@+id/iv_detail"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@mipmap/just_logo_app"
        android:transitionName="profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/story_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_detail">

        <TextView
            android:id="@+id/name_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/name"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="25sp"
            android:textStyle="bold"
            android:transitionName="name" />

        <TextView
            android:id="@+id/desc_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/story_description"
            android:fontFamily="@font/montserrat_medium"
            android:transitionName="description" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>