<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    tools:context=".ui.main.UploadActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_image"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="40dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_photo_preview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/picture"
            app:srcCompat="@mipmap/just_logo_app"
            tools:ignore="ImageContrastCheck" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linear_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/cv_image"
        app:layout_constraintStart_toStartOf="@id/cv_image"
        app:layout_constraintTop_toBottomOf="@id/cv_image">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/camera"
            android:textColor="@color/white"
            android:backgroundTint="?attr/colorPrimary"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/gallery"
            android:textColor="@color/white"
            android:backgroundTint="?attr/colorPrimary"/>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description_box_input"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_button">

        <EditText
            android:id="@+id/box_add_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:inputType="textMultiLine"
            android:layout_marginTop="6dp"
            android:lines="5"
            android:maxLines="5"
            android:scrollbars="vertical"
            android:textColorHint="?attr/colorAccent"
            tools:ignore="Autofill,LabelFor,TextContrastCheck,VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_add"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:text="@string/add_story"
        android:textColor="@color/white"
        android:backgroundTint="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description_box_input"
        tools:ignore="VisualLintButtonSize" />


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/progressBar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:lottie_fileName="bubble_loading.json"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>